--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/vite": "^4.0.6",
     "apexcharts": "^4.4.0",
     "axios": "^1.7.9",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
