tagamount, Order Status, Cancel, Given, Dasti/Return Cards and other changes

--- a/server/.env
+++ b/server/.env
@@ -2,5 +2,5 @@ PORT=5000
 DB_HOST=localhost
 DB_USER=root
 DB_PASS=
-DB_NAME=pos
+DB_NAME=POS
 JWT_SECRET=UDREKTRf5iWvG0XwQyhQcOrxlvKyaB7xO9RxzBYdFRJuQea8bkN2S
